# jpgxl-art

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: deploy.yml
assets/: input.jxl
gallery/: 00-sky-and-grass.jxlart  01-progress-pride-flag.jxlart  02-luca-deltapalette.jxlart  03-luca-deltapalette-b.jxlart  04-luca-deltapalette-c.jxlart  05-luca-gaborish.jxlart  06-luca-rec2100.jxlart  08-luca-rct20.jxlart  09-luca-rec2100-pq.jxlart  10-luca-rct2.jxlart  11-luca-noise-xyb.jxlart  12-luca-upsample4.jxlart  13-luca-deltapalette-wgh.jxlart  14-surma-deltapalette.jxlart  15-luca-rct13.jxlart  17-luca-nepred.jxlart  19-luca-rct13-b.jxlart  20-luca-deltapalette-ww.jxlart  21-luca-deltapalette-nwn.jxlart  22-luca-deltapalette-composite.jxlart  23-luca-spline.jxlart  24-luca-spline-rct6.jxlart  25-luca-wgh.jxlart  27-luca-ne-avgwn.jxlart  28-luca-deltapalette-gradient.jxlart  29-luca-prev-errors.jxlart  30-luca-bitdepth1.jxlart  31-surma-squeeze-rct16.jxlart  32-surma-splines.jxlart  33-luca-rec2100-noise.jxlart  34-surma-complex.jxlart  35-hidden-channels.jxlart  36-simple-gradient.jxlart  37-luca-minimal.jxlart  38-luca-framepos.jxlart  bg-001-simplified-diagonalization-argument.jxlart  bg-002-cyborg-brain.jxlart  bg-003-lovestorm.jxlart  bg-004-approximation-of-a-perfect-sunset.jxlart  bg-005-ceci-nest-pas-un-arbre.jxlart  (+194 more)
scripts/: build_jxl_from_tree.sh  find_gallery_dupes.py  prettify_gallery.py  scrape_gallery.py
src/: codec.rs  gallery.rs  main.rs  mutations.rs  render.rs  tree.rs
static/: app.js  index.html
