[package]
name = "artxl"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
base64 = { version = "0.22", features = ["std"] }
rand = "0.8"
futures = "0.3"
